@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* console history adds a column for ClusterSenderInfo.getInvalidationSplit()
+	requires modification of persistent schema
 * MandatoryViolation and FinalViolation for PriceField has PriceField itself as feature, not the source-Field of the PriceField
 	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
 * MandatoryViolation for Media has Media itself as feature, not the body of the Media
